[workspace]
resolver = "2"
members = [
  "app_state",
  "common_routes",
  "config_lib",
  "constants",
  "to_err_string",
  "enum_extension_lib/enum_extension",
  "enum_extension_lib",
  "error_occurence_lib",
  "from_sqlx_pg_error",
  "from_str",
  "git_info",
  "git_sync_command",
  "pg_crud",
  "pg_crud/pg_crud_common",
  "pg_crud/pg_crud_common_and_macros_common",
  "pg_crud/pg_crud_macros_common",
  "pg_crud/pg_json_object_type",
  "pg_crud/pg_json_object_type/macros",
  "pg_crud/pg_json_object_type/source",
  "pg_crud/pg_json_object_type/test",
  "pg_crud/pg_json_object_type/test_content",
  "pg_crud/pg_json_object_type/common",
  "pg_crud/pg_json_types",
  "pg_crud/pg_json_types/gen_pg_json_types",
  "pg_crud/pg_json_types/gen_pg_json_types_common",
  "pg_crud/pg_json_types/gen_pg_json_types_source",
  "pg_crud/pg_json_types/gen_pg_json_types_test",
  "pg_crud/pg_json_types/gen_pg_json_types_test_content",
  "pg_crud/pg_table",
  "pg_crud/pg_table/gen_pg_table",
  "pg_crud/pg_table/gen_pg_table_source",
  "pg_crud/pg_table/gen_pg_table_test",
  "pg_crud/pg_table/gen_pg_table_test_content",
  "pg_crud/pg_types",
  "pg_crud/pg_types/gen_pg_types",
  "pg_crud/pg_types/gen_pg_types_source",
  "pg_crud/pg_types/gen_pg_types_test",
  "pg_crud/pg_types/gen_pg_types_test_content",
  "pg_crud/pg_types/pg_types_common",
  "pg_crud/where_filters",
  "pg_crud/where_filters/gen_where_filters",
  "gen_quotes",
  "macros_helpers",
  "macros_helpers/gen_struct_or_enum_derive_ts_builder",
  "server",
  "server_app_state",
  "server_config",
  "server_table_example",
  "server_types",
  "telegram_bot",
  "config_lib/gen_getter_traits_for_struct_fields",
  "config_lib/try_from_env",
  "config_lib/server_port",
  "config_lib/server_port/server_port_try_from_u16",
  "config_lib/server_port/server_port_common",
  "http_logic",
  "route_validators",
  "tests",
  "impl_display_as_debug",
  "macro_clippy_check_common",
  "error_occurence_test",
  "file_system",
  "token_patterns",
  "naming",
  "naming/naming_common",
  "naming/naming_macros",
  "panic_location",
  "providers",
]
exclude = []

[workspace.dependencies]
serde = {version = "=1.0.228", features = ["derive"]}
serde_derive = {version = "=1.0.228"}
serde_json = {version = "=1.0.148"}
toml = {version = "=0.9.8"}
scraper = {version = "=0.25.0"}
regex = {version = "=1.12.2"}
convert_case = {version = "=0.10.0"}
uuid = {version = "=1.19.0", features = ["serde", "v4"]}
reqwest = {version = "=0.13.1", default-features = false, features = ["json", "blocking", "cookies", "gzip", "brotli", "deflate", "native-tls", "multipart", "stream", "http2"]}
tokio = {version = "=1.48.0", features = ["macros", "rt-multi-thread"]}
sqlx = {version = "=0.8.6", features = ["postgres", "uuid", "bigdecimal", "rust_decimal", "chrono", "time", "bit-vec", "runtime-tokio", "ipnetwork", "mac_address", "json"]}
axum = {version = "=0.8.8", features = ["macros"]}
tower-http = {version = "=0.6.8", features = ["trace", "fs", "cors"]}
http-body = {version = "=1.0.1"}
http = {version = "=1.4.0"}
futures = {version = "=0.3.31"}
tracing = {version = "=0.1.44", features = ["log", "valuable"]}
tracing-subscriber = {version = "=0.3.22", features = ["registry", "env-filter"]}
log = {version = "=0.4.29"}
teloxide = {version = "=0.17.0", features = ["macros"]}
num_cpus = {version = "=1.17.0"}
secrecy = {version = "=0.10.3", features = ["serde"]}
chrono = {version = "=0.4.42", features = ["serde"]}
thiserror = {version = "=2.0.17"}
strum = {version = "=0.27.2"}
strum_macros = {version = "=0.27.2"}
dotenv = {version = "=0.15.0"}
time = {version = "=0.3.44", features = ["serde"]}
quote = {version = "=1.0.42"}
syn = {version = "=2.0.112", features = ["full", "visit", "extra-traits"] }
proc-macro2 = {version = "=1.0.104"}
utoipa = {version = "=4.1.0", features = ["axum_extras"]} #=5.4.0 contains path bug, update later
schemars = {version = "=1.2.0"}
rayon = {version = "=1.11.0"}
bytes = {version = "=1.11.0"}
walkdir = {version = "=2.5.0"}
itertools = {version = "=0.14.0"}

[workspace.lints.rust]
unsafe_code = { level = "deny" }
absolute_paths_not_starting_with_crate = { level = "deny" }
deprecated_in_future = { level = "deny" }
elided_lifetimes_in_paths = { level = "deny" }
explicit_outlives_requirements = { level = "deny" }
ffi_unwind_calls = { level = "deny" }
let_underscore_drop = { level = "deny" }
macro_use_extern_crate = { level = "deny" }
meta_variable_misuse = { level = "deny" }
missing_abi = { level = "deny" }
missing_copy_implementations = { level = "allow" } #GenPostgresJsonObjectType cannot simply know impl or not for Select for fields
missing_debug_implementations = { level = "deny" }
missing_docs = { level = "allow" } #too lazy to write docs now and i think this is not necessary now
non_ascii_idents = { level = "deny" }
rust_2021_incompatible_closure_captures = { level = "deny" }
rust_2021_incompatible_or_patterns = { level = "deny" }
rust_2021_prefixes_incompatible_syntax = { level = "deny" }
rust_2021_prelude_collisions = { level = "deny" }
single_use_lifetimes = { level = "deny" }
trivial_casts = { level = "deny" }
trivial_numeric_casts = { level = "deny" }
unnameable_types = { level = "deny" }
unreachable_pub = { level = "deny" }
unsafe_op_in_unsafe_fn = { level = "deny" }
unstable_features = { level = "deny" }
unused_crate_dependencies = { level = "warn" }
unused_extern_crates = { level = "deny" }
unused_import_braces = { level = "deny" }
unused_lifetimes = { level = "deny" }
unused_macro_rules = { level = "deny" }
unused_qualifications = { level = "deny" }
unused_results = { level = "deny" }
dead_code = { level = "warn" }
variant_size_differences = { level = "deny" }
ambiguous_glob_imports = { level = "deny" }
ambiguous_glob_reexports = { level = "deny" }
anonymous_parameters = { level = "deny" }
array_into_iter = { level = "deny" }
asm_sub_register = { level = "deny" }
async_fn_in_trait = { level = "deny" }
bad_asm_style = { level = "deny" }
bare_trait_objects = { level = "deny" }
break_with_label_and_loop = { level = "deny" }
clashing_extern_declarations = { level = "deny" }
coherence_leak_check = { level = "deny" }
confusable_idents = { level = "deny" }
const_evaluatable_unchecked = { level = "deny" }
const_item_mutation = { level = "deny" }
deprecated = { level = "deny" }
deprecated_where_clause_location = { level = "deny" }
deref_into_dyn_supertrait = { level = "deny" }
deref_nullptr = { level = "deny" }
dropping_copy_types = { level = "deny" }
dropping_references = { level = "deny" }
drop_bounds = { level = "deny" }
duplicate_macro_attributes = { level = "deny" }
dyn_drop = { level = "deny" }
elided_lifetimes_in_associated_constant = { level = "deny" }
ellipsis_inclusive_range_patterns = { level = "deny" }
exported_private_dependencies = { level = "deny" }
forbidden_lint_groups = { level = "deny" }
forgetting_copy_types = { level = "deny" }
forgetting_references = { level = "deny" }
for_loops_over_fallibles = { level = "deny" }
function_item_references = { level = "deny" }
hidden_glob_reexports = { level = "deny" }
improper_ctypes = { level = "deny" }
improper_ctypes_definitions = { level = "deny" }
incomplete_features = { level = "deny" }
inline_no_sanitize = { level = "deny" }
internal_features = { level = "deny" }
invalid_doc_attributes = { level = "deny" }
invalid_from_utf8 = { level = "deny" }
invalid_macro_export_arguments = { level = "deny" }
invalid_nan_comparisons = { level = "deny" }
invalid_value = { level = "deny" }
irrefutable_let_patterns = { level = "deny" }
large_assignments = { level = "deny" }
late_bound_lifetime_arguments = { level = "deny" }
legacy_derive_helpers = { level = "deny" }
map_unit_fn = { level = "deny" }
mixed_script_confusables = { level = "deny" }
named_arguments_used_positionally = { level = "deny" }
non_camel_case_types = { level = "deny" }
non_fmt_panics = { level = "deny" }
non_shorthand_field_patterns = { level = "deny" }
non_snake_case = { level = "deny" }
non_upper_case_globals = { level = "deny" }
noop_method_call = { level = "deny" }
no_mangle_generic_items = { level = "deny" }
opaque_hidden_inferred_bound = { level = "deny" }
overlapping_range_endpoints = { level = "deny" }
path_statements = { level = "deny" }
private_bounds = { level = "deny" }
private_interfaces = { level = "deny" }
redundant_semicolons = { level = "deny" }
renamed_and_removed_lints = { level = "deny" }
semicolon_in_expressions_from_macros = { level = "deny" }
special_module_name = { level = "deny" }
stable_features = { level = "deny" }
suspicious_double_ref_op = { level = "deny" }
dangling_pointers_from_temporaries = { level = "deny" }
trivial_bounds = { level = "deny" }
type_alias_bounds = { level = "deny" }
tyvar_behind_raw_pointer = { level = "deny" }
uncommon_codepoints = { level = "deny" }
unconditional_recursion = { level = "deny" }
unexpected_cfgs = { level = "deny" }
ungated_async_fn_track_caller = { level = "deny" }
uninhabited_static = { level = "deny" }
unknown_lints = { level = "deny" }
unnameable_test_items = { level = "deny" }
unreachable_code = { level = "deny" }
unreachable_patterns = { level = "deny" }
unstable_name_collisions = { level = "deny" }
unstable_syntax_pre_expansion = { level = "deny" }
unused_allocation = { level = "deny" }
unused_assignments = { level = "deny" }
unused_associated_type_bounds = { level = "deny" }
unused_attributes = { level = "deny" }
unused_braces = { level = "deny" }
unused_comparisons = { level = "deny" }
unused_doc_comments = { level = "deny" }
unused_features = { level = "deny" }
unused_imports = { level = "deny" }
unused_labels = { level = "deny" }
unused_macros = { level = "deny" }
unused_must_use = { level = "deny" }
unused_mut = { level = "deny" }
unused_parens = { level = "deny" }
unused_unsafe = { level = "deny" }
unused_variables = { level = "warn" }
useless_ptr_null_checks = { level = "deny" }
warnings = { level = "warn" }
while_true = { level = "deny" }
ambiguous_associated_items = { level = "deny" }
arithmetic_overflow = { level = "deny" }
bindings_with_variant_name = { level = "deny" }
conflicting_repr_hints = { level = "deny" }
enum_intrinsics_non_enums = { level = "deny" }
ill_formed_attribute_input = { level = "deny" }
incomplete_include = { level = "deny" }
ineffective_unstable_trait_impl = { level = "deny" }
invalid_atomic_ordering = { level = "deny" }
invalid_from_utf8_unchecked = { level = "deny" }
invalid_reference_casting = { level = "deny" }
invalid_type_param_default = { level = "deny" }
integer_to_ptr_transmutes = { level = "deny" }
let_underscore_lock = { level = "deny" }
long_running_const_eval = { level = "deny" }
macro_expanded_macro_exports_accessed_by_absolute_paths = { level = "deny" }
mutable_transmutes = { level = "deny" }
named_asm_labels = { level = "deny" }
no_mangle_const_items = { level = "deny" }
overflowing_literals = { level = "deny" }
patterns_in_fns_without_body = { level = "deny" }
proc_macro_derive_resolution_fallback = { level = "deny" }
pub_use_of_private_extern_crate = { level = "deny" }
soft_unstable = { level = "deny" }
text_direction_codepoint_in_comment = { level = "deny" }
text_direction_codepoint_in_literal = { level = "deny" }
unconditional_panic = { level = "deny" }
undropped_manually_drops = { level = "deny" }
unknown_crate_types = { level = "deny" }
useless_deprecated = { level = "deny" }
redundant_lifetimes = { level = "deny" }
unit_bindings = { level = "deny" }
non_contiguous_range_endpoints = { level = "deny" }
non_local_definitions = { level = "deny" }
refining_impl_trait_internal = { level = "deny" }
refining_impl_trait_reachable = { level = "deny" }
static_mut_refs = { level = "deny" }
unpredictable_function_pointer_comparisons = { level = "deny" }
double_negations = { level = "deny" }
ambiguous_negative_literals = { level = "deny" }
closure_returning_async_block = { level = "deny" }
deprecated_safe_2024 = { level = "deny" }
edition_2024_expr_fragment_specifier = { level = "deny" }
if_let_rescope = { level = "deny" }
impl_trait_overcaptures = { level = "deny" }
impl_trait_redundant_captures = { level = "deny" }
keyword_idents_2018 = { level = "deny" }
keyword_idents_2024 = { level = "deny" }
linker_messages = { level = "deny" }
missing_unsafe_on_extern = { level = "deny" }
redundant_imports = { level = "deny" }
rust_2024_guarded_string_incompatible_syntax = { level = "deny" }
rust_2024_incompatible_pat = { level = "deny" }
rust_2024_prelude_collisions = { level = "deny" }
tail_expr_drop_order = { level = "deny" }
unsafe_attr_outside_unsafe = { level = "deny" }
ambiguous_wide_pointer_comparisons = { level = "deny" }
boxed_slice_into_iter = { level = "deny" }
const_item_interior_mutations = { level = "deny" }
dangling_pointers_from_locals = { level = "deny" }
function_casts_as_integer = { level = "deny" }
malformed_diagnostic_attributes = { level = "deny" }
malformed_diagnostic_format_literals = { level = "deny" }
mismatched_lifetime_syntaxes = { level = "deny" }
misplaced_diagnostic_attributes = { level = "deny" }
ptr_to_integer_transmute_in_consts = { level = "deny" }
repr_c_enums_larger_than_int = { level = "deny" }
rtsan_nonblocking_async = { level = "deny" }
self_constructor_from_outer_item = { level = "deny" }
uncovered_param_in_projection = { level = "deny" }
unfulfilled_lint_expectations = { level = "deny" }
unknown_diagnostic_attributes = { level = "deny" }
unnecessary_transmutes = { level = "deny" }
unsupported_calling_conventions = { level = "deny" }
uses_power_alignment = { level = "deny" }
varargs_without_pattern = { level = "deny" }
binary_asm_labels = { level = "deny" }
dangerous_implicit_autorefs = { level = "deny" }
dependency_on_unit_never_type_fallback = { level = "deny" }
explicit_builtin_cfgs_in_flags = { level = "deny" }
invalid_null_arguments = { level = "deny" }
never_type_fallback_flowing_into_unsafe = { level = "deny" }
out_of_scope_macro_calls = { level = "deny" }
repr_transparent_non_zst_fields = { level = "deny" }
unused_visibilities = { level = "deny" }
aarch64_softfloat_neon = { level = "deny" }
inline_always_mismatching_target_features = { level = "deny" } 
improper_gpu_kernel_arg = { level = "deny" }
missing_gpu_kernel_export_name = { level = "deny" }
ambiguous_panic_imports = { level = "deny" }
ambiguous_glob_imported_traits = { level = "deny" }
ambiguous_import_visibilities = { level = "deny" }
ambiguous_derive_helpers = { level = "deny" }

[workspace.lints.clippy]
absolute_paths = { level = "deny" }
absurd_extreme_comparisons = { level = "deny" }
alloc_instead_of_core = { level = "deny" }
allow_attributes = { level = "allow" } #serde used too much allow_attributes.
allow_attributes_without_reason = { level = "allow" } #serde used too much allow_attributes.
almost_complete_range = { level = "deny" }
almost_swapped = { level = "deny" }
approx_constant = { level = "deny" }
arc_with_non_send_sync = { level = "deny" }
arithmetic_side_effects = { level = "deny" }
as_conversions = { level = "deny" }
as_ptr_cast_mut = { level = "deny" }
as_underscore = { level = "deny" }
assertions_on_constants = { level = "deny" }
assertions_on_result_states = { level = "deny" }
assign_op_pattern = { level = "deny" }
assigning_clones = { level = "deny" }
async_yields_async = { level = "deny" }
await_holding_invalid_type = { level = "deny" }
await_holding_lock = { level = "deny" }
await_holding_refcell_ref = { level = "deny" }
bad_bit_mask = { level = "deny" }
big_endian_bytes = { level = "deny" }
bind_instead_of_map = { level = "deny" }
blanket_clippy_restriction_lints = { level = "deny" }
blocks_in_conditions = { level = "deny" }
bool_assert_comparison = { level = "deny" }
bool_comparison = { level = "deny" }
bool_to_int_with_if = { level = "deny" }
borrow_as_ptr = { level = "deny" }
borrow_deref_ref = { level = "deny" }
borrow_interior_mutable_const = { level = "deny" }
borrowed_box = { level = "deny" }
box_collection = { level = "deny" }
box_default = { level = "deny" }
boxed_local = { level = "deny" }
branches_sharing_code = { level = "deny" }
builtin_type_shadow = { level = "deny" }
bytes_count_to_len = { level = "deny" }
bytes_nth = { level = "deny" }
cargo_common_metadata = { level = "deny" }
case_sensitive_file_extension_comparisons = { level = "deny" }
cast_abs_to_unsigned = { level = "deny" }
cast_enum_constructor = { level = "deny" }
cast_enum_truncation = { level = "deny" }
cast_lossless = { level = "deny" }
cast_nan_to_int = { level = "deny" }
cast_possible_truncation = { level = "deny" }
cast_possible_wrap = { level = "deny" }
cast_precision_loss = { level = "deny" }
cast_ptr_alignment = { level = "deny" }
cast_sign_loss = { level = "deny" }
cast_slice_different_sizes = { level = "deny" }
cast_slice_from_raw_parts = { level = "deny" }
char_lit_as_u8 = { level = "deny" }
chars_last_cmp = { level = "deny" }
chars_next_cmp = { level = "deny" }
checked_conversions = { level = "deny" }
clear_with_drain = { level = "deny" }
clone_on_copy = { level = "allow" } #allow coz in proc macroses unknown which syn::Field type implements clone+copy.
clone_on_ref_ptr = { level = "deny" }
cloned_instead_of_copied = { level = "deny" }
cmp_null = { level = "deny" }
cmp_owned = { level = "deny" }
cognitive_complexity = { level = "allow" } #breaks some code
collapsible_else_if = { level = "deny" }
collapsible_if = { level = "deny" }
collapsible_match = { level = "deny" }
collapsible_str_replace = { level = "deny" }
collection_is_never_read = { level = "deny" }
comparison_chain = { level = "deny" }
comparison_to_empty = { level = "deny" }
const_is_empty = { level = "deny" }
copy_iterator = { level = "deny" }
crate_in_macro_def = { level = "deny" }
create_dir = { level = "deny" }
crosspointer_transmute = { level = "deny" }
dbg_macro = { level = "deny" }
debug_assert_with_mut_call = { level = "deny" }
decimal_literal_representation = { level = "allow" }#dont think its more readable
declare_interior_mutable_const = { level = "deny" }
default_constructed_unit_structs = { level = "deny" }
default_instead_of_iter_empty = { level = "deny" }
default_numeric_fallback = { level = "deny" }
default_trait_access = { level = "deny" }
default_union_representation = { level = "deny" }
deprecated_cfg_attr = { level = "deny" }
deprecated_clippy_cfg_attr = { level = "deny" }
deprecated_semver = { level = "deny" }
deref_addrof = { level = "deny" }
deref_by_slicing = { level = "deny" }
derivable_impls = { level = "deny" }
derive_ord_xor_partial_ord = { level = "deny" }
derive_partial_eq_without_eq = { level = "allow" }#todo deny after macro refactoring
derived_hash_with_manual_eq = { level = "deny" }
disallowed_macros = { level = "deny" }
disallowed_methods = { level = "deny" }
disallowed_names = { level = "deny" }
disallowed_script_idents = { level = "deny" }
disallowed_types = { level = "deny" }
diverging_sub_expression = { level = "deny" }
doc_link_with_quotes = { level = "deny" }
doc_markdown = { level = "deny" }
double_comparisons = { level = "deny" }
double_must_use = { level = "deny" }
double_parens = { level = "deny" }
drain_collect = { level = "deny" }
drop_non_drop = { level = "deny" }
duplicate_mod = { level = "deny" }
duplicate_underscore_argument = { level = "deny" }
duplicated_attributes = { level = "deny" }
duration_subsec = { level = "deny" }
eager_transmute = { level = "deny" }
else_if_without_else = { level = "deny" }
empty_docs = { level = "deny" }
empty_drop = { level = "deny" }
empty_enum_variants_with_brackets = { level = "deny" }
empty_line_after_doc_comments = { level = "deny" }
empty_line_after_outer_attr = { level = "deny" }
empty_loop = { level = "deny" }
empty_structs_with_brackets = { level = "deny" }
enum_clike_unportable_variant = { level = "deny" }
enum_glob_use = { level = "deny" }
enum_variant_names = { level = "deny" }
eq_op = { level = "deny" }
equatable_if_let = { level = "deny" }
erasing_op = { level = "deny" }
err_expect = { level = "deny" }
error_impl_error = { level = "deny" }
excessive_nesting = { level = "deny" }
excessive_precision = { level = "deny" }
exhaustive_enums = { level = "allow" } #not need if all binaries would recompile for each version
exhaustive_structs = { level = "allow" } #not need if all binaries would recompile for each version
exit = { level = "deny" }
expect_fun_call = { level = "deny" }
expect_used = { level = "allow" } #todo if there is a lot of time then deny
expl_impl_clone_on_copy = { level = "deny" }
explicit_auto_deref = { level = "deny" }
explicit_counter_loop = { level = "deny" }
explicit_deref_methods = { level = "deny" }
explicit_into_iter_loop = { level = "deny" }
explicit_iter_loop = { level = "deny" }
explicit_write = { level = "deny" }
extend_with_drain = { level = "deny" }
extra_unused_lifetimes = { level = "deny" }
extra_unused_type_parameters = { level = "deny" }
fallible_impl_from = { level = "deny" }
field_reassign_with_default = { level = "deny" }
filetype_is_file = { level = "deny" }
filter_map_bool_then = { level = "deny" }
filter_map_identity = { level = "deny" }
filter_map_next = { level = "deny" }
filter_next = { level = "deny" }
flat_map_identity = { level = "deny" }
flat_map_option = { level = "deny" }
float_arithmetic = { level = "deny" }
float_cmp = { level = "deny" }
float_cmp_const = { level = "deny" }
float_equality_without_abs = { level = "deny" }
fn_params_excessive_bools = { level = "deny" }
fn_to_numeric_cast = { level = "deny" }
fn_to_numeric_cast_any = { level = "deny" }
fn_to_numeric_cast_with_truncation = { level = "deny" }
for_kv_map = { level = "deny" }
forget_non_drop = { level = "deny" }
format_collect = { level = "deny" }
format_in_format_args = { level = "deny" }
format_push_string = { level = "deny" }
four_forward_slashes = { level = "deny" }
from_iter_instead_of_collect = { level = "deny" }
from_over_into = { level = "deny" }
from_raw_with_void_ptr = { level = "deny" }
from_str_radix_10 = { level = "deny" }
future_not_send = { level = "deny" }
get_first = { level = "deny" }
get_last_with_len = { level = "deny" }
get_unwrap = { level = "deny" }
host_endian_bytes = { level = "deny" }
identity_op = { level = "deny" }
if_let_mutex = { level = "deny" }
if_not_else = { level = "deny" }
if_same_then_else = { level = "deny" }
if_then_some_else_none = { level = "deny" }
ifs_same_cond = { level = "deny" }
ignored_unit_patterns = { level = "deny" }
impl_hash_borrow_with_str_and_bytes = { level = "deny" }
impl_trait_in_params = { level = "deny" }
implicit_clone = { level = "deny" }
implicit_hasher = { level = "deny" }
implicit_return = { level = "allow" } #not need
implicit_saturating_add = { level = "deny" }
implicit_saturating_sub = { level = "deny" }
implied_bounds_in_impls = { level = "deny" }
impossible_comparisons = { level = "deny" }
imprecise_flops = { level = "deny" }
incompatible_msrv = { level = "deny" }
inconsistent_digit_grouping = { level = "deny" }
inconsistent_struct_constructor = { level = "deny" }
index_refutable_slice = { level = "deny" }
indexing_slicing = { level = "deny" }
ineffective_bit_mask = { level = "deny" }
ineffective_open_options = { level = "deny" }
inefficient_to_string = { level = "deny" }
infallible_destructuring_match = { level = "deny" }
infinite_iter = { level = "deny" }
inherent_to_string = { level = "deny" }
inherent_to_string_shadow_display = { level = "deny" }
init_numbered_fields = { level = "deny" }
inline_always = { level = "deny" }
inline_asm_x86_att_syntax = { level = "deny" }
inline_asm_x86_intel_syntax = { level = "deny" }
inline_fn_without_body = { level = "deny" }
inspect_for_each = { level = "deny" }
int_plus_one = { level = "deny" }
integer_division = { level = "deny" }
into_iter_on_ref = { level = "deny" }
into_iter_without_iter = { level = "deny" }
invalid_regex = { level = "deny" }
invalid_upcast_comparisons = { level = "deny" }
invisible_characters = { level = "deny" }
is_digit_ascii_radix = { level = "deny" }
items_after_statements = { level = "deny" }
items_after_test_module = { level = "deny" }
iter_cloned_collect = { level = "deny" }
iter_count = { level = "deny" }
iter_kv_map = { level = "deny" }
iter_next_loop = { level = "deny" }
iter_next_slice = { level = "deny" }
iter_not_returning_iterator = { level = "deny" }
iter_nth = { level = "deny" }
iter_nth_zero = { level = "deny" }
iter_on_empty_collections = { level = "deny" }
iter_on_single_items = { level = "deny" }
iter_out_of_bounds = { level = "deny" }
iter_over_hash_type = { level = "deny" }
iter_overeager_cloned = { level = "deny" }
iter_skip_next = { level = "deny" }
iter_skip_zero = { level = "deny" }
iter_with_drain = { level = "deny" }
iter_without_into_iter = { level = "deny" }
iterator_step_by_zero = { level = "deny" }
join_absolute_paths = { level = "deny" }
just_underscores_and_digits = { level = "deny" }
large_const_arrays = { level = "deny" }
large_digit_groups = { level = "deny" }
large_enum_variant = { level = "deny" }
large_futures = { level = "deny" }
large_include_file = { level = "deny" }
large_stack_arrays = { level = "deny" }
large_stack_frames = { level = "deny" }
large_types_passed_by_value = { level = "deny" }
len_without_is_empty = { level = "deny" }
len_zero = { level = "deny" }
let_and_return = { level = "deny" }
let_underscore_future = { level = "deny" }
let_underscore_lock = { level = "deny" }
let_underscore_must_use = { level = "deny" }
let_underscore_untyped = { level = "deny" }
let_unit_value = { level = "deny" }
let_with_type_underscore = { level = "deny" }
lines_filter_map_ok = { level = "deny" }
linkedlist = { level = "deny" }
little_endian_bytes = { level = "deny" }
lossy_float_literal = { level = "deny" }
macro_use_imports = { level = "deny" }
main_recursion = { level = "deny" }
manual_assert = { level = "deny" }
manual_async_fn = { level = "deny" }
manual_bits = { level = "deny" }
manual_clamp = { level = "deny" }
manual_filter = { level = "deny" }
manual_filter_map = { level = "deny" }
manual_find = { level = "deny" }
manual_find_map = { level = "deny" }
manual_flatten = { level = "deny" }
manual_hash_one = { level = "deny" }
manual_instant_elapsed = { level = "deny" }
manual_is_ascii_check = { level = "deny" }
manual_is_finite = { level = "deny" }
manual_is_infinite = { level = "deny" }
manual_let_else = { level = "deny" }
manual_main_separator_str = { level = "deny" }
manual_map = { level = "deny" }
manual_memcpy = { level = "deny" }
manual_next_back = { level = "deny" }
manual_non_exhaustive = { level = "deny" }
manual_ok_or = { level = "deny" }
manual_range_contains = { level = "deny" }
manual_range_patterns = { level = "deny" }
manual_rem_euclid = { level = "deny" }
manual_retain = { level = "deny" }
manual_saturating_arithmetic = { level = "deny" }
manual_slice_size_calculation = { level = "deny" }
manual_split_once = { level = "deny" }
manual_str_repeat = { level = "deny" }
manual_string_new = { level = "deny" }
manual_strip = { level = "deny" }
manual_swap = { level = "deny" }
manual_try_fold = { level = "deny" }
manual_unwrap_or = { level = "deny" }
manual_while_let_some = { level = "deny" }
many_single_char_names = { level = "deny" }
map_clone = { level = "deny" }
map_collect_result_unit = { level = "deny" }
map_entry = { level = "deny" }
map_err_ignore = { level = "deny" }
map_flatten = { level = "deny" }
map_identity = { level = "deny" }
map_unwrap_or = { level = "deny" }
match_as_ref = { level = "deny" }
match_bool = { level = "deny" }
match_like_matches_macro = { level = "deny" }
match_overlapping_arm = { level = "deny" }
match_ref_pats = { level = "deny" }
match_result_ok = { level = "deny" }
match_same_arms = { level = "deny" }
match_single_binding = { level = "deny" }
match_str_case_mismatch = { level = "deny" }
match_wild_err_arm = { level = "deny" }
match_wildcard_for_single_variants = { level = "deny" }
maybe_infinite_iter = { level = "deny" }
mem_forget = { level = "deny" }
mem_replace_option_with_none = { level = "deny" }
mem_replace_with_default = { level = "deny" }
mem_replace_with_uninit = { level = "deny" }
min_ident_chars = { level = "deny" }
min_max = { level = "deny" }
mismatching_type_param_order = { level = "deny" }
misnamed_getters = { level = "deny" }
misrefactored_assign_op = { level = "deny" }
missing_assert_message = { level = "deny" }
missing_asserts_for_indexing = { level = "deny" }
missing_const_for_fn = { level = "deny" }
missing_docs_in_private_items = { level = "allow" } #too lazy to do it on dev stage
missing_enforced_import_renames = { level = "deny" }
missing_errors_doc = { level = "allow" } #too lazy to do it on dev stage
missing_fields_in_debug = { level = "deny" }
missing_inline_in_public_items = { level = "allow" } #its not so clear where to add #[inline] and where not
missing_panics_doc = { level = "allow" } #too lazy to do it on dev stage
missing_safety_doc = { level = "deny" }
missing_spin_loop = { level = "deny" }
missing_trait_methods = { level = "allow" } #serde and other crates do not implement this feature. too much time to refactor that
mistyped_literal_suffixes = { level = "deny" }
mixed_case_hex_literals = { level = "deny" }
mixed_read_write_in_expression = { level = "deny" }
mod_module_files = { level = "deny" }
module_inception = { level = "deny" }
module_name_repetitions = { level = "deny" }
modulo_arithmetic = { level = "deny" }
modulo_one = { level = "deny" }
multi_assignments = { level = "deny" }
multiple_crate_versions = { level = "allow" } #dont know how to fix it
multiple_inherent_impl = { level = "deny" }
multiple_unsafe_ops_per_block = { level = "deny" }
must_use_candidate = { level = "deny" }
must_use_unit = { level = "deny" }
mut_from_ref = { level = "deny" }
mut_mut = { level = "deny" }
mut_mutex_lock = { level = "deny" }
mut_range_bound = { level = "deny" }
mutable_key_type = { level = "deny" }
mutex_atomic = { level = "deny" }
mutex_integer = { level = "deny" }
naive_bytecount = { level = "deny" }
needless_arbitrary_self_type = { level = "deny" }
needless_bitwise_bool = { level = "deny" }
needless_bool = { level = "deny" }
needless_bool_assign = { level = "deny" }
needless_borrow = { level = "deny" }
needless_borrowed_reference = { level = "deny" }
needless_borrows_for_generic_args = { level = "deny" }
needless_collect = { level = "deny" }
needless_continue = { level = "deny" }
needless_doctest_main = { level = "deny" }
needless_else = { level = "deny" }
needless_for_each = { level = "deny" }
needless_late_init = { level = "deny" }
needless_lifetimes = { level = "deny" }
needless_match = { level = "deny" }
needless_option_as_deref = { level = "deny" }
needless_option_take = { level = "deny" }
needless_parens_on_range_literals = { level = "deny" }
needless_pass_by_ref_mut = { level = "deny" }
needless_pass_by_value = { level = "deny" }
needless_pub_self = { level = "deny" }
needless_question_mark = { level = "deny" }
needless_range_loop = { level = "deny" }
needless_raw_string_hashes = { level = "deny" }
needless_raw_strings = { level = "deny" }
needless_return = { level = "deny" }
needless_return_with_question_mark = { level = "deny" }
needless_splitn = { level = "deny" }
needless_update = { level = "deny" }
neg_cmp_op_on_partial_ord = { level = "deny" }
neg_multiply = { level = "deny" }
negative_feature_names = { level = "deny" }
never_loop = { level = "deny" }
new_ret_no_self = { level = "deny" }
new_without_default = { level = "deny" }
no_effect = { level = "deny" }
no_effect_replace = { level = "deny" }
no_effect_underscore_binding = { level = "deny" }
no_mangle_with_rust_abi = { level = "deny" }
non_ascii_literal = { level = "deny" }
non_canonical_clone_impl = { level = "deny" }
non_canonical_partial_ord_impl = { level = "deny" }
non_minimal_cfg = { level = "deny" }
non_octal_unix_permissions = { level = "deny" }
non_send_fields_in_send_ty = { level = "deny" }
nonminimal_bool = { level = "deny" }
nonsensical_open_options = { level = "deny" }
nonstandard_macro_braces = { level = "deny" }
not_unsafe_ptr_arg_deref = { level = "deny" }
obfuscated_if_else = { level = "deny" }
octal_escapes = { level = "deny" }
ok_expect = { level = "deny" }
only_used_in_recursion = { level = "deny" }
op_ref = { level = "deny" }
option_as_ref_deref = { level = "deny" }
option_env_unwrap = { level = "deny" }
option_filter_map = { level = "deny" }
option_if_let_else = { level = "deny" }
option_map_or_none = { level = "deny" }
option_map_unit_fn = { level = "deny" }
option_option = { level = "deny" }
or_fun_call = { level = "deny" }
or_then_unwrap = { level = "deny" }
out_of_bounds_indexing = { level = "deny" }
panicking_overflow_checks = { level = "deny" }
overly_complex_bool_expr = { level = "deny" }
panic = { level = "allow" }
panic_in_result_fn = { level = "deny" }
panicking_unwrap = { level = "deny" }
partial_pub_fields = { level = "deny" }
partialeq_ne_impl = { level = "deny" }
partialeq_to_none = { level = "deny" }
path_buf_push_overwrite = { level = "deny" }
path_ends_with_ext = { level = "deny" }
pattern_type_mismatch = { level = "allow" } #dont know how to refactor that. forces to use ref pattern or (.clone with conflict with other lints)
permissions_set_readonly_false = { level = "deny" }
possible_missing_comma = { level = "deny" }
precedence = { level = "deny" }
print_in_format_impl = { level = "deny" }
print_literal = { level = "deny" }
print_stderr = { level = "allow" } #need for dev
print_stdout = { level = "allow" } #need for dev
print_with_newline = { level = "deny" }
println_empty_string = { level = "deny" }
ptr_arg = { level = "deny" }
ptr_as_ptr = { level = "deny" }
ptr_cast_constness = { level = "deny" }
ptr_eq = { level = "deny" }
ptr_offset_with_cast = { level = "deny" }
pub_use = { level = "allow" } #its limitation, not a rule. annoying but not so usefull
pub_with_shorthand = { level = "allow" } #conflicts with pub_without_shorthand
pub_without_shorthand = { level = "deny" }
question_mark = { level = "deny" }
question_mark_used = { level = "allow" } #not against it
range_minus_one = { level = "deny" }
range_plus_one = { level = "deny" }
range_zip_with_len = { level = "deny" }
rc_buffer = { level = "deny" }
rc_clone_in_vec_init = { level = "deny" }
rc_mutex = { level = "deny" }
read_line_without_trim = { level = "deny" }
read_zero_byte_vec = { level = "deny" }
readonly_write_lock = { level = "deny" }
recursive_format_impl = { level = "deny" }
redundant_allocation = { level = "deny" }
redundant_as_str = { level = "deny" }
redundant_async_block = { level = "deny" }
redundant_at_rest_pattern = { level = "deny" }
redundant_clone = { level = "deny" }
redundant_closure = { level = "deny" }
redundant_closure_call = { level = "deny" }
redundant_closure_for_method_calls = { level = "deny" }
redundant_comparisons = { level = "deny" }
redundant_else = { level = "deny" }
redundant_feature_names = { level = "deny" }
redundant_field_names = { level = "deny" }
redundant_guards = { level = "deny" }
redundant_locals = { level = "deny" }
redundant_pattern = { level = "deny" }
redundant_pattern_matching = { level = "deny" }
redundant_pub_crate = { level = "allow" } #dont understand how to use correctly. conflicts with "unreachable pub"
redundant_slicing = { level = "deny" }
redundant_static_lifetimes = { level = "deny" }
redundant_type_annotations = { level = "deny" }
ref_binding_to_reference = { level = "deny" }
ref_option_ref = { level = "deny" }
ref_patterns = { level = "deny" }
repeat_once = { level = "deny" }
reserve_after_initialization = { level = "deny" }
rest_pat_in_fully_bound_structs = { level = "deny" }
result_large_err = { level = "allow" } #not sure how to fix it
result_map_or_into_option = { level = "deny" }
result_map_unit_fn = { level = "deny" }
result_unit_err = { level = "deny" }
return_self_not_must_use = { level = "deny" }
reversed_empty_ranges = { level = "deny" }
same_functions_in_if_condition = { level = "deny" }
same_item_push = { level = "deny" }
same_name_method = { level = "deny" }
search_is_some = { level = "deny" }
seek_from_current = { level = "deny" }
seek_to_start_instead_of_rewind = { level = "deny" }
self_assignment = { level = "deny" }
self_named_constructors = { level = "deny" }
self_named_module_files = { level = "allow" } #old rust style guide. conflicts with mod_module_files (which is Rust 2018+ style guide)
semicolon_if_nothing_returned = { level = "deny" }
semicolon_inside_block = { level = "deny" }
semicolon_outside_block = { level = "deny" }
separated_literal_suffix = { level = "deny" }
serde_api_misuse = { level = "deny" }
shadow_reuse = { level = "deny" }
shadow_same = { level = "deny" }
shadow_unrelated = { level = "deny" }
short_circuit_statement = { level = "deny" }
should_implement_trait = { level = "deny" }
should_panic_without_expect = { level = "deny" }
significant_drop_in_scrutinee = { level = "deny" }
significant_drop_tightening = { level = "deny" }
similar_names = { level = "allow" } # not so usefull. too much to refactor.
single_call_fn = { level = "deny" } # utoipa function code gen problems with that lint
single_char_add_str = { level = "deny" }
single_char_lifetime_names = { level = "deny" }
single_char_pattern = { level = "deny" }
single_component_path_imports = { level = "deny" }
single_element_loop = { level = "deny" }
single_match = { level = "deny" }
single_match_else = { level = "deny" }
single_range_in_vec_init = { level = "deny" }
size_of_in_element_count = { level = "deny" }
size_of_ref = { level = "deny" }
skip_while_next = { level = "deny" }
slow_vector_initialization = { level = "deny" }
stable_sort_primitive = { level = "deny" }
std_instead_of_alloc = { level = "allow" } #not using no_std
std_instead_of_core = { level = "allow" } #not using no_std
str_to_string = { level = "deny" }
string_add = { level = "deny" }
string_add_assign = { level = "deny" }
string_extend_chars = { level = "deny" }
string_from_utf8_as_bytes = { level = "deny" }
string_lit_as_bytes = { level = "deny" }
string_lit_chars_any = { level = "deny" }
string_slice = { level = "deny" }
strlen_on_c_strings = { level = "deny" }
struct_excessive_bools = { level = "deny" }
struct_field_names = { level = "allow" } #just makes no sense. very annoying if u generating similar fields
suboptimal_flops = { level = "deny" }
suspicious_arithmetic_impl = { level = "deny" }
suspicious_assignment_formatting = { level = "deny" }
suspicious_command_arg_space = { level = "deny" }
suspicious_doc_comments = { level = "deny" }
suspicious_else_formatting = { level = "deny" }
suspicious_map = { level = "deny" }
suspicious_op_assign_impl = { level = "deny" }
suspicious_operation_groupings = { level = "deny" }
suspicious_splitn = { level = "deny" }
suspicious_to_owned = { level = "deny" }
suspicious_unary_op_formatting = { level = "deny" }
suspicious_xor_used_as_pow = { level = "deny" }
swap_ptr_to_ref = { level = "deny" }
tabs_in_doc_comments = { level = "deny" }
temporary_assignment = { level = "deny" }
tests_outside_test_module = { level = "deny" }
to_digit_is_some = { level = "deny" }
to_string_in_format_args = { level = "deny" }
todo = { level = "deny" }
too_many_arguments = { level = "allow" } #useless
too_many_lines = { level = "allow" } #useless
toplevel_ref_arg = { level = "deny" }
trailing_empty_array = { level = "deny" }
trait_duplication_in_bounds = { level = "deny" }
transmute_bytes_to_str = { level = "deny" }
transmute_int_to_bool = { level = "deny" }
transmute_int_to_non_zero = { level = "deny" }
transmute_null_to_fn = { level = "deny" }
transmute_ptr_to_ptr = { level = "deny" }
transmute_ptr_to_ref = { level = "deny" }
transmute_undefined_repr = { level = "deny" }
transmutes_expressible_as_ptr_casts = { level = "deny" }
transmuting_null = { level = "deny" }
trim_split_whitespace = { level = "deny" }
trivial_regex = { level = "deny" }
trivially_copy_pass_by_ref = { level = "deny" }
try_err = { level = "deny" }
tuple_array_conversions = { level = "deny" }
type_complexity = { level = "allow" } #annoying for code generation
type_id_on_box = { level = "deny" }
type_repetition_in_bounds = { level = "deny" }
undocumented_unsafe_blocks = { level = "deny" }
unicode_not_nfc = { level = "deny" }
unimplemented = { level = "deny" }
uninit_assumed_init = { level = "deny" }
uninit_vec = { level = "deny" }
uninlined_format_args = { level = "deny" }
unit_arg = { level = "deny" }
unit_cmp = { level = "deny" }
unit_hash = { level = "deny" }
unit_return_expecting_ord = { level = "deny" }
unnecessary_box_returns = { level = "deny" }
unnecessary_cast = { level = "deny" }
unnecessary_fallible_conversions = { level = "deny" }
unnecessary_filter_map = { level = "deny" }
unnecessary_find_map = { level = "deny" }
unnecessary_fold = { level = "deny" }
unnecessary_join = { level = "deny" }
unnecessary_lazy_evaluations = { level = "deny" }
unnecessary_literal_unwrap = { level = "deny" }
unnecessary_map_on_constructor = { level = "deny" }
unnecessary_mut_passed = { level = "deny" }
unnecessary_operation = { level = "deny" }
unnecessary_owned_empty_strings = { level = "deny" }
unnecessary_safety_comment = { level = "deny" }
unnecessary_safety_doc = { level = "deny" }
unnecessary_self_imports = { level = "deny" }
unnecessary_sort_by = { level = "deny" }
unnecessary_struct_initialization = { level = "deny" }
unnecessary_to_owned = { level = "deny" }
unnecessary_unwrap = { level = "deny" }
unnecessary_wraps = { level = "deny" }
unneeded_field_pattern = { level = "deny" }
unneeded_wildcard_pattern = { level = "deny" }
unnested_or_patterns = { level = "deny" }
unreachable = { level = "deny" }
unreadable_literal = { level = "deny" }
unsafe_derive_deserialize = { level = "deny" }
unsafe_removed_from_name = { level = "deny" }
unseparated_literal_suffix = { level = "allow" }#separated_literal_suffix deny, unseparated_literal_suffix allow
unsound_collection_transmute = { level = "deny" }
unused_async = { level = "deny" }
unused_enumerate_index = { level = "deny" }
unused_format_specs = { level = "deny" }
unused_io_amount = { level = "deny" }
unused_peekable = { level = "deny" }
unused_rounding = { level = "deny" }
unused_self = { level = "deny" }
unused_unit = { level = "deny" }
unusual_byte_groupings = { level = "deny" }
unwrap_in_result = { level = "deny" }
unwrap_or_default = { level = "deny" }
unwrap_used = { level = "deny" }
upper_case_acronyms = { level = "deny" }
use_debug = { level = "allow" } #too much code to refactor, maybe for size of binary and longer compile times
use_self = { level = "deny" }
used_underscore_binding = { level = "deny" }
useless_asref = { level = "deny" }
useless_attribute = { level = "deny" }
useless_conversion = { level = "deny" }
useless_format = { level = "deny" }
useless_let_if_seq = { level = "deny" }
useless_transmute = { level = "deny" }
useless_vec = { level = "deny" }
vec_box = { level = "deny" }
vec_init_then_push = { level = "deny" }
vec_resize_to_zero = { level = "deny" }
verbose_bit_mask = { level = "deny" }
verbose_file_reads = { level = "deny" }
waker_clone_wake = { level = "deny" }
while_immutable_condition = { level = "deny" }
while_let_loop = { level = "deny" }
while_let_on_iterator = { level = "deny" }
wildcard_dependencies = { level = "deny" }
wildcard_enum_match_arm = { level = "deny" }
wildcard_imports = { level = "deny" }
wildcard_in_or_patterns = { level = "deny" }
write_literal = { level = "deny" }
write_with_newline = { level = "deny" }
writeln_empty_string = { level = "deny" }
wrong_self_convention = { level = "deny" }
wrong_transmute = { level = "deny" }
zero_divided_by_zero = { level = "deny" }
zero_prefixed_literal = { level = "deny" }
zero_ptr = { level = "deny" }
zero_sized_map_values = { level = "deny" }
zst_offset = { level = "deny" }
infinite_loop = { level = "deny" }# didnt wasted for for order declaration(a,b,c...)
integer_division_remainder_used = { level = "deny" }
iter_filter_is_ok = { level = "deny" }
iter_filter_is_some = { level = "deny" }
legacy_numeric_constants = { level = "deny" }
lint_groups_priority = { level = "deny" }
manual_c_str_literals = { level = "deny" }
manual_is_variant_and = { level = "deny" }
manual_unwrap_or_default = { level = "deny" }
missing_transmute_annotations = { level = "deny" }
mixed_attributes_style = { level = "deny" }
multiple_bound_locations = { level = "deny" }
option_as_ref_cloned = { level = "deny" }
pub_underscore_fields = { level = "deny" }
ref_as_ptr = { level = "deny" }
repeat_vec_with_capacity = { level = "deny" }
result_filter_map = { level = "deny" }
str_split_at_newline = { level = "deny" }
suspicious_open_options = { level = "deny" }
test_attr_in_doctest = { level = "deny" }
missing_const_for_thread_local = { level = "deny" }
to_string_trait_impl = { level = "deny" }
unconditional_recursion = { level = "deny" }
uninhabited_references = { level = "deny" }
unnecessary_clippy_cfg = { level = "deny" }
unnecessary_get_then_check = { level = "deny" }
unnecessary_result_map_or_else = { level = "deny" }
zero_repeat_side_effects = { level = "deny" }
doc_lazy_continuation = { level = "deny" }
macro_metavars_in_unsafe = { level = "deny" }
manual_pattern_char_comparison = { level = "deny" }
needless_character_iteration = { level = "deny" }
needless_maybe_sized = { level = "deny" }
renamed_function_params = { level = "deny" }
while_float = { level = "deny" }
arbitrary_source_item_ordering = { level = "deny" }
as_pointer_underscore = { level = "deny" }
byte_char_slices = { level = "deny" }
cfg_not_test = { level = "deny" }
char_indices_as_byte_indices = { level = "deny" }
cloned_ref_to_slice_refs = { level = "deny" }
coerce_container_to_any = { level = "deny" }
confusing_method_to_numeric_cast = { level = "deny" }
doc_broken_link = { level = "deny" }
doc_comment_double_space_linebreaks = { level = "deny" }
doc_include_without_cfg = { level = "deny" }
doc_link_code = { level = "deny" }
doc_nested_refdefs = { level = "deny" }
doc_overindented_list_items = { level = "deny" }
doc_paragraphs_missing_punctuation = { level = "deny" }
doc_suspicious_footnotes = { level = "deny" }
double_ended_iterator_last = { level = "deny" }
elidable_lifetime_names = { level = "deny" }
empty_enums = { level = "deny" }
field_scoped_visibility_modifiers = { level = "deny" }
ignore_without_reason = { level = "deny" }
infallible_try_from = { level = "deny" }
inverted_saturating_sub = { level = "deny" }
io_other_error = { level = "deny" }
ip_constant = { level = "deny" }
literal_string_with_formatting_args = { level = "allow" }#in proc macros for generating formatting content is not correct
manual_abs_diff = { level = "deny" }
manual_contains = { level = "deny" }
manual_dangling_ptr = { level = "deny" }
manual_div_ceil = { level = "deny" }
manual_ignore_case_cmp = { level = "deny" }
manual_inspect = { level = "deny" }
manual_is_multiple_of = { level = "deny" }
manual_is_power_of_two = { level = "deny" }
manual_midpoint = { level = "deny" }
manual_ok_err = { level = "deny" }
manual_option_as_slice = { level = "deny" }
manual_repeat_n = { level = "deny" }
manual_rotate = { level = "deny" }
manual_slice_fill = { level = "deny" }
map_all_any_identity = { level = "deny" }
map_with_unused_argument_over_ranges = { level = "deny" }
mem_replace_option_with_some = { level = "deny" }
needless_as_bytes = { level = "deny" }
needless_ifs = { level = "deny" }
non_std_lazy_statics = { level = "deny" }
non_zero_suggestions = { level = "deny" }
owned_cow = { level = "deny" }
pathbuf_init_then_push = { level = "deny" }
pointer_format = { level = "deny" }
pointers_in_nomem_asm_block = { level = "deny" }
possible_missing_else = { level = "deny" }
precedence_bits = { level = "deny" }
redundant_iter_cloned = { level = "deny" }
redundant_test_prefix = { level = "deny" }
ref_option = { level = "deny" }
regex_creation_in_loops = { level = "deny" }
replace_box = { level = "deny" }
repr_packed_without_abi = { level = "deny" }
return_and_then = { level = "deny" }
self_only_used_in_recursion = { level = "deny" }
set_contains_or_insert = { level = "deny" }
single_option_map = { level = "deny" }
sliced_string_as_bytes = { level = "deny" }
swap_with_temporary = { level = "deny" }
too_long_first_doc_paragraph = { level = "deny" }
unbuffered_bytes = { level = "deny" }
unchecked_time_subtraction = { level = "deny" }
unnecessary_debug_formatting = { level = "deny" }
unnecessary_first_then_check = { level = "deny" }
unnecessary_literal_bound = { level = "deny" }
unnecessary_map_or = { level = "deny" }
unnecessary_min_or_max = { level = "deny" }
unnecessary_option_map_or_else = { level = "deny" }
unnecessary_semicolon = { level = "deny" }
unneeded_struct_pattern = { level = "deny" }
unused_result_ok = { level = "deny" }
unused_trait_names = { level = "deny" }
used_underscore_items = { level = "deny" }
useless_concat = { level = "deny" }
useless_nonzero_new_unchecked = { level = "deny" }
volatile_composites = { level = "deny" }
zombie_processes = { level = "deny" }
decimal_bitwise_operands = { level = "deny" }
manual_ilog2 = { level = "deny" }
ptr_offset_by_literal = { level = "deny" }
needless_type_cast = { level = "deny" }
same_length_and_capacity = { level = "deny" }
duration_suboptimal_units = { level = "deny" }
manual_take = { level = "deny" }
manual_checked_ops = { level = "deny" }
